Updating location of files within repo

--- a/src/classes/log4j2.properties
+++ b/src/classes/log4j2.properties
@@ -152,6 +152,7 @@ logger.hibernateDeprecation.level=error
 
 logger.VSCodeExtensionWF.name=VSCodeExtensionWF
 logger.VSCodeExtensionWF.level=debug
+logger.VSCodeExtensionWF.appenderRef.syslog.ref=stdout
 
 #logger.orgHibernate.name=org.hibernate
 #logger.orgHibernate.level=info
